created barebones ui

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
 
+    </head>
+
+    <body>
+        <div id="container-main">
+
+        </div>
+    </body>
 </html>
 
 <script type="text/javascript" src="script.js"></script>
